basic chat functions complete

--- a/chat/index.html
+++ b/chat/index.html
@@ -26,9 +26,9 @@
   </head>
   <body>
     <div class="container">
-    <div id="thread"></div>
-    <textarea class = "form-control" name="message"></textarea>
-    <button id="enter">Send</button>
+    <div id="thread" class="col-md-12"></div>
+    <textarea class = "form-control" id="message"></textarea>
+    <button id="send">Send</button>
     </div>
 
 
